--- a/odoo-basic/approvals/views/request_views.xml
+++ b/odoo-basic/approvals/views/request_views.xml
@@ -1,27 +1,45 @@
 <odoo>
-	<record id="people_view_form" model="ir.ui.view">
-		<field name="name">people.form</field>
-		<field name="model">people</field>
+	<record id="request_view_form" model="ir.ui.view">
+		<field name="name">request.form</field>
+		<field name="model">requests</field>
 		<field name="arch" type="xml">
-			<form string="People">
+			<form string="Request">
 				<sheet>
+					<field name="active" invisible="1"/>
+					<div name="button_box" class="oe_button_box"/>
+                    <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
+                    <div class="oe_title" name="sale_order_template_title">
+                        <label for="title" id="sale_order_template_title"/>
+                        <h1>
+                            <field name="title" placeholder="e.g. Standard Consultancy Package" class="d-block"/>
+                        </h1>
+                    </div>
 					<group>
-						<field name="name" />
 						<group>
-							<field name="house_ids" />
+							<field name="description" />
+							<field name="users" />
 						</group>
-						<group></group>
+						<group>
+							<field name="from_date" />
+							<field name="to_date" />
+						</group>
+						<group>
+							<field name="schema_id" />
+						</group>
+						<group>
+							<field name="table_id" />
+						</group>
 					</group>
 				</sheet>
 			</form>
 		</field>
 	</record>
 
-	<record id="people_action" model="ir.actions.act_window">
-		<field name="name">People</field>
+	<record id="request_action" model="ir.actions.act_window">
+		<field name="name">Request</field>
 		<field name="type">ir.actions.act_window</field>
-		<field name="res_model">people</field>
+		<field name="res_model">requests</field>
 	</record>
 
-	<menuitem id="menu_people" name="xxx2Many Field" parent="menu_field" action='people_action' />
+	<menuitem id="request" name="Request" parent="menu_field" action='request_action' />
 </odoo>
