--- a/odoo-basic/approvals/views/request_views.xml
+++ b/odoo-basic/approvals/views/request_views.xml
@@ -1,4 +1,16 @@
 <odoo>
+	<record id="request_view_tree" model="ir.ui.view">
+        <field name="name">request.tree</field>
+        <field name="model">requests</field>
+        <field name="arch" type="xml">
+            <tree string="Requests">
+                <field name="title" />
+				<field name="description" />
+                <field name="users" />
+                <field name="state" />
+            </tree>
+        </field>
+    </record>
 	<record id="request_view_form" model="ir.ui.view">
 		<field name="name">request.form</field>
 		<field name="model">requests</field>
