--- a/odoo-basic/approvals/views/lakehouse_views.xml
+++ b/odoo-basic/approvals/views/lakehouse_views.xml
@@ -6,16 +6,16 @@
 			<form string="Lakehouse">
 				<sheet>
 					<group>
-						<field name="name" />
-						<field name="group_id" />
+						<group>
+							<field name="name" />
+						</group>
+						<group></group>
+						<group>
+							<field name="user_id" />
+						</group>
+						<group></group>
 					</group>
-					<group>
-					</group>
-					<group>
-						<field name="user_id" />
-					</group>
-					<group>
-					</group>
+					
 				</sheet>
 			</form>
 		</field>
