--- a/odoo-basic/approvals/views/table_views.xml
+++ b/odoo-basic/approvals/views/table_views.xml
@@ -21,5 +21,5 @@
 		<field name="res_model">tables</field>
 	</record>
 
-	<menuitem id="table" name="Table" parent="menu_field" action='table_action' />
+	<menuitem id="table" name="Table" parent="master_data" action='table_action' />
 </odoo>
